--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,6 @@
 <h1> Products </h1>
-
-<% @cart.each do |item| %>
-<%= item %>
+<% if @cart %>
+  <% @cart.each do |item| %>
+  <%= item %>
+  <% end %>
 <% end %>
