automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,8 @@
 <h1> Products </h1>
-<% if @cart %>
+<ul>
+  <% if @cart %>
   <% @cart.each do |item| %>
-  <%= item %>
+  <li><%= item %></li>
   <% end %>
 <% end %>
+</ul>
