automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,5 +10,5 @@
 <%= form_for @product do |f|%>
 <%= f.label :product %>
 <%= f.text_field :product %>
-<%= f.submit as "Add to Cart" %>
+<%= f.submit as: "Add to Cart" %>
 <% end %>
