automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,8 +7,8 @@
 <% end %>
 </ul>
 
-<%= form_for @product do |f|%>
+<%= form_for @product, url: {action: "add"} do |f|%>
 <%= f.label :product %>
 <%= f.text_field :product %>
-<%= f.submit as: "Add to Cart" %>
+<%= f.submit "Add to Cart" %>
 <% end %>
