automatically backed up by learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,5 +11,5 @@
 <%= form_tag('/', method: :post) do%>
 <%= label_tag :product %>
 <%= text_field_tag :product %>
-<%= submit_tag "Add to Cart" %>
+<%= submit_tag "sdd to cart" %>
 <% end %>
