--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <h1> Products </h1>
 <ul>
   <% if @cart %>
-    <% @cart.each do |item| %>
+    <% cart.each do |item| %>
     <li><%= item %></li>
   <% end %>
 <% end %>
